--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,14 @@
-body, html {
-  height: 100%;
+body {
+
   background-color: black;
 }
-.bg {
-  /* The image used (image located in the css folder) */
-  background-image: url("BackgroundPicture.png");
 
-  /* Full height */
-  height: 100%;
+.houseImage-Style {
+  width: 100%;
+  height:auto;
+  position: absolute;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
-
 
 
 p {
@@ -24,26 +18,32 @@ p {
 
 }
 
-p .aboutme-Pfont {
+.aboutme-Pfont {
   color: white;
   font-family: "Libre Caslon Text", serif;
   font-size: 1rem;
 }
+
+.aboutDescription-padding {
+  padding: 100px 0;
+}
+
+@media only screen and (max-width: 800px) {
+  .aboutDescription-padding{
+      padding: 30px;
+  }
+}
+
+
+
 
 h1 {
   color: white;
   font-family: "Libre Caslon Text", serif;
   font-size: 3rem;
 
-
 }
 
-h2 {
-  color: #eec60a;
-  font-family: "Libre Caslon Text", serif;
-  font-size: 1rem;
-
-}
 
 h3 {
   font-family: "Milonga", cursive;
@@ -94,27 +94,12 @@ h5 {
 
 }
 
-#MiddleContent {
-margin-top: 100px;
-position: relative;
 
-}
 
 .background-tint {
 background-color: rgba(0, 0, 0, 0.8);
 }
 
-.heading-tint {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  padding-top: 100px;
-  right: 20px;
-
-}
-
-.invisibleBlock{
-  padding: 100px;
-}
 
 
 #sign-up {
@@ -139,7 +124,7 @@ background-color: rgba(0, 0, 0, 0.8);
 }
 
 .section-heading {
-  padding-top: 200px;
+  padding-top: 100px;
   font-size: 6rem;
 }
 
@@ -157,6 +142,8 @@ background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
 
+
+
 /* sign-up form section */
 
 .form-section {
@@ -165,11 +152,20 @@ background-color: rgba(0, 0, 0, 0.8);
 
 @media only screen and (max-width: 992px) {
   .form-section {
-      padding: 50px 100px;
+      padding: 50px 100px 150px 100px;
   }
 }
 
 
+.fontIcon{
+height: 100px;
+width: 100px;
+border-radius: 15px;
+}
+
+.carouselBackground-tint {
+background-color: rgba(0, 0, 0, 0.6);
+}
 
 
 .carouselPictures {
