--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,9 @@ p {
   padding: 100px 0;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
   .aboutDescription-padding{
-      padding: 30px;
+      padding: 30px 0;
   }
 }
 
@@ -91,9 +91,14 @@ h5 {
   font-family: "Libre Caslon Text", serif;
   font-weight: 400;
   color: white !important;
-
 }
 
+@media only screen and (max-width: 1000px) {
+  .nav-link {
+      font-size: 3rem;
+
+  }
+}
 
 
 .background-tint {
